@@ -1,3 +1,4 @@
+* Check read access of report records (#13505)
 * Forbid editing cron when it is running
 * Store last cron durations
 * Use JSONB to store MultiSelection field by default
